--- a/index.html
+++ b/index.html
@@ -1891,7 +1891,7 @@
       <div class="leistung-item">
         <a href="/leistungen#akute-behandlung" class="leistung-item-link">
           <div class="leistung-image-wrapper">
-            <img src="/assets/dmp.png" alt="DMP-Betreuung Icon" class="leistung-icon">
+            <img src="/assets/dmp.webp" alt="DMP-Betreuung Icon" class="leistung-icon">
             <div class="mehr-erfahren-button">Mehr erfahren</div>
           </div>
         </a>
@@ -1901,7 +1901,7 @@
       <div class="leistung-item">
         <a href="/leistungen#moderne-diagnostik" class="leistung-item-link">
           <div class="leistung-image-wrapper">
-            <img src="/assets/diagnostik.png" alt="Diagnostik & Überwachung Icon" class="leistung-icon">
+            <img src="/assets/diagnostik.webp" alt="Diagnostik & Überwachung Icon" class="leistung-icon">
             <div class="mehr-erfahren-button">Mehr erfahren</div>
           </div>
         </a>
@@ -1911,7 +1911,7 @@
       <div class="leistung-item">
         <a href="/leistungen#chronische-betreuung" class="leistung-item-link">
           <div class="leistung-image-wrapper">
-            <img src="/assets/diabetes.png" alt="Vorsorge und Impfungen Icon" class="leistung-icon">
+            <img src="/assets/diabetes.webp" alt="Vorsorge und Impfungen Icon" class="leistung-icon">
             <div class="mehr-erfahren-button">Mehr erfahren</div>
           </div>
         </a>
