--- a/leistungen.html
+++ b/leistungen.html
@@ -2088,12 +2088,12 @@
           <table class="notfall-ubersicht-tabelle">
             <tbody>
               <tr>
-                <td><img src="/assets/notfall.png" alt="Notfall Icon" class="notfall-icon-svg"></td>
+                <td><img src="/assets/notfall.webp" alt="Notfall Icon" class="notfall-icon-svg"></td>
                 <td><span class="notfall-text-label">lebensbedrohlicher Notfall:</span></td>
                 <td><span class="notfall-nummer">112</span></td>
               </tr>
               <tr>
-                <td><img src="/assets/notfall.png" alt="Notfall Icon" class="notfall-icon-svg"></td>
+                <td><img src="/assets/notfall.webp" alt="Notfall Icon" class="notfall-icon-svg"></td>
                 <td><span class="notfall-text-label">dringlicher Notfall:</span></td>
                 <td><span class="notfall-nummer">116117</span></td>
               </tr>
@@ -2114,7 +2114,7 @@
         </div>
         <div class="notfall-info-rechts">
           <!-- Hier den Pfad zum richtigen Icon einfügen, z.B. <img src="/assets/mein-grosses-icon.svg" alt="Platzhalter"> -->
-          <img src="/assets/krankenwagen.png" alt="Krankenwagen Icon" class="platzhalter-icon-gross">
+          <img src="/assets/krankenwagen.webp" alt="Krankenwagen Icon" class="platzhalter-icon-gross">
         </div>
       </div>
     </div>
@@ -2175,7 +2175,7 @@
       </div>
       <div class="diagnostik-icon-sticky-rechts">
         <div class="diagnostik-icon-container">
-          <img src="/assets/herz.png" alt="Moderne Diagnostik Illustration" class="diagnostik-icon">
+          <img src="/assets/herz.webp" alt="Moderne Diagnostik Illustration" class="diagnostik-icon">
         </div>
       </div>
     </div>
@@ -2196,7 +2196,7 @@
         <div class="card-inner">
           <div class="card-front">
             <div class="bild-mit-overlay-container">
-              <img src="/assets/KHK.png" alt="DMP für KHK" class="betreuung-bild">
+              <img src="/assets/KHK.webp" alt="DMP für KHK" class="betreuung-bild">
               <div class="neues-weisses-rechteck"></div>
               <div class="info-rechteck">Mehr erfahren</div>
               <div class="plus-kreis"><span>+</span></div>
@@ -2215,7 +2215,7 @@
         <div class="card-inner">
           <div class="card-front">
             <div class="bild-mit-overlay-container">
-              <img src="/assets/asthma.png" alt="DMP für Asthma" class="betreuung-bild">
+              <img src="/assets/asthma.webp" alt="DMP für Asthma" class="betreuung-bild">
               <div class="neues-weisses-rechteck"></div>
               <div class="info-rechteck">Mehr erfahren</div>
               <div class="plus-kreis"><span>+</span></div>
@@ -2234,7 +2234,7 @@
         <div class="card-inner">
           <div class="card-front">
             <div class="bild-mit-overlay-container">
-              <img src="/assets/diabetes dmp.png" alt="DMP für Diabetes" class="betreuung-bild">
+              <img src="/assets/diabetes dmp.webp" alt="DMP für Diabetes" class="betreuung-bild">
               <div class="neues-weisses-rechteck"></div>
               <div class="info-rechteck">Mehr erfahren</div>
               <div class="plus-kreis"><span>+</span></div>
@@ -2264,7 +2264,7 @@
     <div class="vorsorge-impfschutz-content-wrapper">
       <div class="vorsorge-impfschutz-icon-container">
         <!-- Ersetzen Sie 'vorsorge-icon-placeholder.png' durch Ihr gewünschtes Icon -->
-        <img src="/assets/vorsorge.png" alt="Vorsorge Icon" class="vorsorge-impfschutz-icon">
+        <img src="/assets/vorsorge.webp" alt="Vorsorge Icon" class="vorsorge-impfschutz-icon">
       </div>
       <div class="vorsorge-impfschutz-text-container">
         <p class="vorsorge-impfschutz-intro">Mit gezielter Vorsorge und umfassendem Impfschutz stärken wir Ihre Gesundheit – heute und für morgen</p>
@@ -2302,7 +2302,7 @@
         <!-- Slide 1: AU -->
         <div class="slide">
           <div class="slide-image-container">
-            <img src="/assets/arbeitsunfähigkeit.png" alt="Arbeitsunfähigkeitsbescheinigung">
+            <img src="/assets/arbeitsunfähigkeit.webp" alt="Arbeitsunfähigkeitsbescheinigung">
           </div>
           <div class="slide-text-container">
             <h4>Arbeitsunfähigkeit (AU)</h4>
@@ -2312,7 +2312,7 @@
         <!-- Slide 2: Behindertenpass -->
         <div class="slide">
           <div class="slide-image-container">
-            <img src="/assets/behindert.png" alt="Behindertenpass">
+            <img src="/assets/behindert.webp" alt="Behindertenpass">
           </div>
           <div class="slide-text-container">
             <h4>Behindertenpass</h4>
@@ -2322,7 +2322,7 @@
         <!-- Slide 3: Attest -->
         <div class="slide">
           <div class="slide-image-container">
-            <img src="/assets/attest.png" alt="Attest">
+            <img src="/assets/attest.webp" alt="Attest">
           </div>
           <div class="slide-text-container">
             <h4>Ärztliche Atteste</h4>
