--- a/index.html
+++ b/index.html
@@ -416,6 +416,21 @@
       /* border-radius: 4px; entfernt, um den "Rahmen"-Effekt beim Herauszoomen zu vermeiden */
     }
 
+    .leistung-image-wrapper#DMP {
+      aspect-ratio: 226 / 250;
+      object-fit: cover;
+    }
+
+    .leistung-image-wrapper#diagnostik {
+      aspect-ratio: 291 / 250;
+      object-fit: cover;
+    }
+
+    .leistung-image-wrapper#vorsorge {
+      aspect-ratio: 218 / 250;
+      object-fit: cover;
+    }
+
     .leistung-icon {
       /* width: fit-content; wird durch max-width ersetzt */
       /* height: 250px; wird vom Wrapper übernommen */
@@ -1891,7 +1906,7 @@
       <div class="leistung-item">
         <a href="/leistungen#akute-behandlung" class="leistung-item-link">
           <div class="leistung-image-wrapper">
-            <img src="/assets/dmp.webp" alt="DMP-Betreuung Icon" class="leistung-icon">
+            <img src="/assets/dmp.webp" alt="DMP-Betreuung Icon" id="DMP" loading="lazy">
             <div class="mehr-erfahren-button">Mehr erfahren</div>
           </div>
         </a>
@@ -1901,7 +1916,7 @@
       <div class="leistung-item">
         <a href="/leistungen#moderne-diagnostik" class="leistung-item-link">
           <div class="leistung-image-wrapper">
-            <img src="/assets/diagnostik.webp" alt="Diagnostik & Überwachung Icon" class="leistung-icon">
+            <img src="/assets/diagnostik.webp" alt="Diagnostik & Überwachung Icon" id="diagnostik" loading="lazy">
             <div class="mehr-erfahren-button">Mehr erfahren</div>
           </div>
         </a>
@@ -1911,7 +1926,7 @@
       <div class="leistung-item">
         <a href="/leistungen#chronische-betreuung" class="leistung-item-link">
           <div class="leistung-image-wrapper">
-            <img src="/assets/diabetes.webp" alt="Vorsorge und Impfungen Icon" class="leistung-icon">
+            <img src="/assets/diabetes.webp" alt="Vorsorge und Impfungen Icon" id="vorsorge" loading="lazy">
             <div class="mehr-erfahren-button">Mehr erfahren</div>
           </div>
         </a>
