--- a/index.html
+++ b/index.html
@@ -1904,7 +1904,7 @@
     </h2>
     <div class="leistungen-items-container">
       <div class="leistung-item">
-        <a href="/leistungen#akute-behandlung" class="leistung-item-link">
+        <a href="/leistungen#chronische-betreuung" class="leistung-item-link">
           <div class="leistung-image-wrapper">
             <img src="/assets/dmp.webp" alt="DMP-Betreuung Icon" id="DMP" loading="lazy">
             <div class="mehr-erfahren-button">Mehr erfahren</div>
@@ -1924,7 +1924,7 @@
         <p class="leistung-label">Diagnostik & Überwachung</p>
       </div>
       <div class="leistung-item">
-        <a href="/leistungen#chronische-betreuung" class="leistung-item-link">
+        <a href="/leistungen#vorsorge-impfschutz" class="leistung-item-link">
           <div class="leistung-image-wrapper">
             <img src="/assets/diabetes.webp" alt="Vorsorge und Impfungen Icon" id="vorsorge" loading="lazy">
             <div class="mehr-erfahren-button">Mehr erfahren</div>
