--- a/index.html
+++ b/index.html
@@ -416,21 +416,6 @@
       /* border-radius: 4px; entfernt, um den "Rahmen"-Effekt beim Herauszoomen zu vermeiden */
     }
 
-    .leistung-image-wrapper#DMP {
-      aspect-ratio: 226 / 250;
-      object-fit: cover;
-    }
-
-    .leistung-image-wrapper#diagnostik {
-      aspect-ratio: 291 / 250;
-      object-fit: cover;
-    }
-
-    .leistung-image-wrapper#vorsorge {
-      aspect-ratio: 218 / 250;
-      object-fit: cover;
-    }
-
     .leistung-icon {
       /* width: fit-content; wird durch max-width ersetzt */
       /* height: 250px; wird vom Wrapper übernommen */
@@ -1904,9 +1889,9 @@
     </h2>
     <div class="leistungen-items-container">
       <div class="leistung-item">
-        <a href="/leistungen#chronische-betreuung" class="leistung-item-link">
+        <a href="/leistungen#akute-behandlung" class="leistung-item-link">
           <div class="leistung-image-wrapper">
-            <img src="/assets/dmp.webp" alt="DMP-Betreuung Icon" id="DMP" loading="lazy">
+            <img src="/assets/dmp.webp" alt="DMP-Betreuung Icon" class="leistung-icon">
             <div class="mehr-erfahren-button">Mehr erfahren</div>
           </div>
         </a>
@@ -1916,7 +1901,7 @@
       <div class="leistung-item">
         <a href="/leistungen#moderne-diagnostik" class="leistung-item-link">
           <div class="leistung-image-wrapper">
-            <img src="/assets/diagnostik.webp" alt="Diagnostik & Überwachung Icon" id="diagnostik" loading="lazy">
+            <img src="/assets/diagnostik.webp" alt="Diagnostik & Überwachung Icon" class="leistung-icon">
             <div class="mehr-erfahren-button">Mehr erfahren</div>
           </div>
         </a>
@@ -1924,9 +1909,9 @@
         <p class="leistung-label">Diagnostik & Überwachung</p>
       </div>
       <div class="leistung-item">
-        <a href="/leistungen#vorsorge-impfschutz" class="leistung-item-link">
+        <a href="/leistungen#chronische-betreuung" class="leistung-item-link">
           <div class="leistung-image-wrapper">
-            <img src="/assets/diabetes.webp" alt="Vorsorge und Impfungen Icon" id="vorsorge" loading="lazy">
+            <img src="/assets/diabetes.webp" alt="Vorsorge und Impfungen Icon" class="leistung-icon">
             <div class="mehr-erfahren-button">Mehr erfahren</div>
           </div>
         </a>
