--- a/leistungen.html
+++ b/leistungen.html
@@ -2302,7 +2302,7 @@
         <!-- Slide 1: AU -->
         <div class="slide">
           <div class="slide-image-container">
-            <img src="/assets/arbeitsunfähigkeit.webp" alt="Arbeitsunfähigkeitsbescheinigung">
+            <img src="/assets/au.webp" alt="Arbeitsunfähigkeitsbescheinigung">
           </div>
           <div class="slide-text-container">
             <h4>Arbeitsunfähigkeit (AU)</h4>
