--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Hausarztpraxis Bazara" />
+  <link rel="canonical" href="https://hausarztpraxis-bazara.de/" />
   <link rel="manifest" href="/favicon/site.webmanifest" />
 
   <!-- Google Fonts Einbindung -->
