--- a/leistungen.html
+++ b/leistungen.html
@@ -9,6 +9,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Hausarztpraxis Bazara" />
   <link rel="manifest" href="/favicon/site.webmanifest" />
+  <link rel="canonical" href="https://hausarztpraxis-bazara.de/leistungen/" />
+
 
   <!-- Google Fonts Einbindung -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Questrial&family=Poppins:wght@300;500;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
