--- a/datenschutzerklärung.html
+++ b/datenschutzerklärung.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Datenschutzerklärung - BAZARA safia</title>
+<title>Datenschutzerklärung | Hausarztpraxis Bazara – Safia Bazara</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
@@ -747,12 +747,12 @@
 
     <h2>2. Verantwortliche Stelle</h2>
     <p>
-      Praxis für Allgemeinmedizin<br>
-      Dr. Safia Bazara<br>
+      Hausarztpraxis Bazara<br>
+      Safia Bazara<br>
       Alte Hellersdorfer Str. 123<br>
       12629 Berlin<br>
       Telefon: +49 (0) 30 9939 168<br>
-      E-Mail: <a href="mailto:info@praxis-bazara.de">info@praxis-bazara.de</a>
+      E-Mail: <a href="mailto:info@praxis-bazara.de">arztpraxisbazara@gmail.com</a>
     </p>
 
     <h2>3. Hosting</h2>
