--- a/faq.html
+++ b/faq.html
@@ -2,8 +2,10 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>FAQ - BAZARA safia</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FAQ – Hausarztpraxis Bazara | Häufige Fragen zu Terminen, Leistungen & Praxis</title>
+  <meta name="description" content="Antworten auf häufige Fragen zur Terminvereinbarung, Leistungen, Praxisabläufen und Patientenservice in der Hausarztpraxis Bazara von Safia Bazara in Berlin.">
+  <meta name="author" content="Hausarztpraxis Bazara – Safia Bazara">
+  <meta name="keywords" content="FAQ Hausarzt Berlin, Termine, Leistungen, Patientenservice, Praxisinformationen, Akute Sprechstunde, Impfungen, Atteste, Hausarztpraxis Bazara">  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
