--- a/leistungen.html
+++ b/leistungen.html
@@ -2,8 +2,10 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Leistungen - BAZARA safia</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Leistungen der Hausarztpraxis Bazara | Akute Sprechstunde, Impfungen & DMP Berlin</title>
+  <meta name="description" content="Unsere Leistungen: Akute Sprechstunde, DMP-Programme für KHK, Asthma, COPD und Diabetes, alle Impfungen sowie Ausstellung von Arbeitsunfähigkeitsbescheinigungen, Attesten und Anträgen für Rentenversicherung und Behindertenausweis.">
+  <meta name="author" content="Hausarztpraxis Bazara – Safia Bazara">
+  <meta name="keywords" content="Akute Sprechstunde Berlin, DMP Programme KHK, DMP Asthma, DMP COPD, DMP Diabetes, Impfungen Berlin, Arbeitsunfähigkeitsbescheinigung, Atteste, Rentenversicherungsanträge, Behindertenausweis, Hausarztpraxis Bazara">  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
