--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Home - BAZARA safia</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hausarztpraxis Bazara – Safia Bazara | Allgemeinmedizin & Innere Medizin in Berlin</title>
+  <meta name="description" content="Hausarztpraxis Bazara – Ihre freundliche Praxis für Allgemeinmedizin und Innere Medizin in Berlin-Hellersdorf. Safia Bazara bietet umfassende hausärztliche Versorgung, Vorsorge, Diagnostik und chronische Betreuung. Termine telefonisch vereinbaren.">
+  <meta name="author" content="Hausarztpraxis Bazara – Safia Bazara">
+  <meta name="keywords" content="Hausarzt Berlin, Allgemeinmedizin Berlin, Innere Medizin, Hausarztpraxis Bazara, Safia Bazara, Arztpraxis Hellersdorf, Vorsorgeuntersuchungen, Blutdruckmessung, Impfungen, chronische Erkrankungen, Langzeit-EKG, DMP-Programme, Patientenservice Berlin">  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
