--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Hausarztpraxis Bazara – Safia Bazara | Innere Medizin & Transfusionsmedizin in Berlin Herllersdorf</title>
+  <title>Hausarztpraxis Bazara – Safia Bazara | Innere Medizin & Transfusionsmedizin in Berlin Hellersdorf</title>
   <meta name="description" content="Hausarztpraxis Bazara – Ihre freundliche Praxis für Innere Medizin und Transfusionsmedizin in Berlin-Hellersdorf. Safia Bazara bietet umfassende hausärztliche Versorgung, Vorsorge, Diagnostik und chronische Betreuung. Termine telefonisch vereinbaren.">
   <meta name="author" content="Hausarztpraxis Bazara – Safia Bazara">
   <meta name="keywords" content="Hausarzt Berlin, Allgemeinmedizin Berlin, Innere Medizin, Hausarztpraxis Bazara, Safia Bazara, Arztpraxis Hellersdorf, Vorsorgeuntersuchungen, Blutdruckmessung, Impfungen, chronische Erkrankungen, Langzeit-EKG, DMP-Programme, Patientenservice Berlin">  <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -177,6 +177,39 @@
       width: 100%; /* Linie dehnt sich auf volle Breite aus */
     }
 
+    /* Language Switcher Styles */
+    .nav-links li.lang-switcher {
+      margin-left: 40px; /* Abstand zum vorherigen Menüpunkt "Kontakt" */
+      display: flex;
+      align-items: center;
+    }
+
+    .nav-links li.lang-switcher a.lang-option {
+      font-size: 13px; /* Kleinere Schriftgröße */
+      font-family: 'Poppins', sans-serif; /* Poppins Schriftart */
+      font-weight: 300; /* Light Gewicht */
+      padding: 0 6px; /* Padding auf 6px gesetzt */
+      color: #b0b0b0; /* Grau für inaktive Sprache (EN), heller für weißen Nav-Text */
+      text-decoration: none;
+    }
+
+    .nav-links li.lang-switcher a.lang-option::after {
+      display: none; /* Keine Unterstreichungsanimation für Sprachoptionen */
+    }
+    /* span.lang-separator ist bereits entfernt/ausgeblendet */
+
+    .nav-links li.lang-switcher a.lang-option.active-lang {
+      color: #ffffff; /* Standard Weiß für aktive Sprache (DE) bei hellem Nav-Text */
+      /* font-weight: 700; entfernt, da beide Light sein sollen */
+    }
+
+    /* Language switcher dark mode adjustment */
+    .main-nav.nav-text-dark .nav-links li.lang-switcher a.lang-option {
+      color: #777777; /* Dunkleres Grau für inaktive Sprache (EN) bei dunklem Nav-Text */
+    }
+    .main-nav.nav-text-dark .nav-links li.lang-switcher a.lang-option.active-lang {
+      color: #000000; /* Schwarz für aktive Sprache (DE) bei dunklem Nav-Text */
+    }
 
     /* Hero Section für das große Bild */
     .hero-section {
@@ -1316,12 +1349,12 @@
         max-height: 100dvh; /* Volle dynamische Viewport-Höhe als Ziel für Animation */
         height: 100dvh; /* Stellt sicher, dass es immer die volle Höhe einnimmt */
         visibility: visible;
-        padding-top: 60px; /* Oberen Abstand etwas reduziert, da die Schrift größer wird */
+        padding-top: 20px; /* Oberen Abstand hinzugefügt */
         padding-bottom: 60px; /* Mehr Abstand unten für die größeren Links und den gewünschten Freiraum */
-        justify-content: flex-end; /* Schiebt die Menüpunkte nach unten */
+        justify-content: flex-start; /* Menüpunkte starten oben */
         transition: opacity 0.35s ease-in-out, max-height 0.35s ease-in-out, padding-top 0.35s ease-in-out, padding-bottom 0.35s ease-in-out, visibility 0s linear 0s;
       }
-
+      
       .main-nav .nav-links li {
         margin: 0;
         width: 100%;
@@ -1329,7 +1362,7 @@
       }
       .main-nav .nav-links li a {
         padding: 10px 30px; /* Vertikales Padding reduziert, horizontales Padding für linken Einzug */
-        /* padding-bottom: 15px; /* Erhöht den Abstand unter jedem Link-Text, falls gewünscht */
+        /* padding-bottom: 15px; /* Erhöht den Abstand unter jedem Link-Text, falls gewünscht */ /* Entfernt, da nicht benötigt */
         display: block;
         width: 100%;
         box-sizing: border-box;
@@ -1354,6 +1387,41 @@
         display: none;
       }
 
+      /* Ersten Hauptmenüpunkt nach unten schieben, um Platz für Sprachwechsler oben zu machen */
+      .main-nav.nav-active .nav-links > li:not(.lang-switcher):first-of-type {
+        margin-top: auto;
+      }
+
+      /* Sprachwechsler im mobilen Menü nach oben links verschieben */
+      .main-nav .nav-links li.lang-switcher {
+        order: -1; /* Stellt sicher, dass es das erste Element in der Flex-Spalte ist */
+        margin-left: 0; /* Entfernt den Desktop-Margin */
+        padding: 10px 30px 10px 32px; /* Passt das Padding an, linker Padding um 2px erhöht für Verschiebung nach rechts */
+        width: 100%; /* Nimmt die volle Breite ein */
+        box-sizing: border-box; /* Stellt sicher, dass Padding in die Breite einberechnet wird */
+        justify-content: flex-start; /* Richtet die Sprachoptionen linksbündig aus */
+        margin-bottom: 15px; /* Abstand unter dem Sprachwechsler leicht reduziert */
+        display: flex; /* Stellt sicher, dass es ein Flex-Container für die a-Tags ist */
+        align-items: center; /* Vertikale Ausrichtung der Sprachoptionen */
+      }
+
+      /* Spezifische Stile für die Sprachoptionen im mobilen Menü */
+      .main-nav .nav-links li.lang-switcher a.lang-option {
+        font-size: 1.1rem;   /* Schriftgröße auf 1.1rem gesetzt */
+        font-weight: 300;    /* Konsistentes Schriftgewicht */
+        line-height: 1.2;    /* Angepasste Zeilenhöhe */
+        padding: 5px 0;      /* Vertikales Padding, kein horizontales Padding hier */
+        display: inline-block; /* Damit sie nebeneinander stehen und nicht die volle Breite einnehmen */
+        width: auto;           /* Automatische Breite basierend auf Inhalt */
+        color: #757575 !important; /* Dunkelgraue Farbe für inaktive Sprache (EN) */
+        margin: 0; /* Zurücksetzen von Margins anderer Regeln */
+      }
+
+      .main-nav .nav-links li.lang-switcher a.lang-option.active-lang {
+        color: #0c0c0c !important; /* Schwarze Farbe für aktive Sprache (DE), passend zu Menüpunkten */
+        margin-right: 12px;      /* Abstand zwischen DE und EN, um 2px vergrößert */
+      }
+
       .hamburger-menu {
         display: block; /* Hamburger-Icon auf Mobilgeräten anzeigen */
       }
@@ -1365,7 +1433,7 @@
       .hero-section {
         align-items: flex-start; /* Inhalt linksbündig ausrichten */
         justify-content: flex-start;
-        padding-top: 220px; /* Abstand nach oben deutlich vergrößert */
+        padding-top: 180px; /* Abstand nach oben deutlich vergrößert */
         padding-left: 20px;   /* Seitlicher Abstand für den Inhalt */
         margin-bottom: -15vh;
         padding-right: 0;  /* Rechter Rand für h1 entfernt (übernimmt jetzt die volle Breite) */
@@ -1852,6 +1920,8 @@
     .main-nav.nav-text-dark .nav-links a { /* Gilt für Desktop */
       color: #000000; /* Schwarz, wenn .nav-text-dark gesetzt ist */
     }
+
+
     /* bleiben unverändert und werden hier wiederverwendet. */
   </style>
 </head>
@@ -1882,6 +1952,11 @@
       <li><a href="/leistungen"><span class="menu-item-number">02</span>Leistungen</a></li>
       <li><a href="/faq"><span class="menu-item-number">03</span>FAQ</a></li>
       <li><a href="/kontakt"><span class="menu-item-number">04</span>Kontakt</a></li>
+      <!-- Language Switcher -->
+      <li class="lang-switcher">
+        <a href="#" class="lang-option active-lang" hreflang="de" aria-label="Sprache auf Deutsch wechseln">DE</a>
+        <a href="/en/" class="lang-option" hreflang="en" aria-label="Switch language to English">EN</a>
+      </li>
     </ul>
     <div class="hamburger-menu" role="button" aria-label="Menü umschalten" aria-expanded="false" aria-controls="nav-links-list">
       <span class="bar bar1"></span>
@@ -2464,6 +2539,5 @@
       }
     });
   </script>
-
 </body>
 </html>
