--- a/en/privacypolicy.html
+++ b/en/privacypolicy.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Datenschutzerklärung | Hausarztpraxis Bazara – Safia Bazara</title>
+  <title>Privacy Policy | Hausarztpraxis Bazara – Safia Bazara</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
@@ -667,6 +667,7 @@
         position: static; /* Positionierung aufheben */
         margin-bottom: 40px; /* Abstand zum nächsten Element */
         text-align: left; /* Inhalt linksbündig */
+        margin-left: -60px; /* Titel ein bisschen nach links verschieben */
       }
 
       .footer-new-title {
@@ -784,7 +785,7 @@
 
   <nav class="main-nav">
     <div class="menu-logo">
-      <a href="/" class="logo-link">
+      <a href="/en/" class="logo-link"> <!-- Changed href to /en/ -->
         <div class="logo-text-container">
           <div class="bazara-style">BAZARA</div>
           <div class="safia-style">safia</div>
@@ -793,88 +794,88 @@
       </a>
     </div>
     <ul class="nav-links" id="nav-links-list">
-      <li><a href="/"><span class="menu-item-number">01</span>Home</a></li>
-      <li><a href="/leistungen"><span class="menu-item-number">02</span>Leistungen</a></li>
-      <li><a href="/faq"><span class="menu-item-number">03</span>FAQ</a></li>
-      <li><a href="/kontakt"><span class="menu-item-number">04</span>Kontakt</a></li>
-      <!-- Language Switcher (kopiert von index.html) -->
+      <li><a href="/en/"><span class="menu-item-number">01</span>Home</a></li> <!-- Changed href to /en/ -->
+      <li><a href="/en/services"><span class="menu-item-number">02</span>Services</a></li> <!-- Changed href to /en/services -->
+      <li><a href="/en/faq"><span class="menu-item-number">03</span>FAQ</a></li> <!-- Changed href to /en/faq -->
+      <li><a href="/en/contact"><span class="menu-item-number">04</span>Contact</a></li> <!-- Changed href to /en/contact -->
+      <!-- Language Switcher -->
       <li class="lang-switcher">
-        <a href="#" class="lang-option active-lang" hreflang="de" aria-label="Sprache auf Deutsch wechseln">DE</a>
-        <a href="/en/privacypolicy" class="lang-option" hreflang="en" aria-label="Switch language to English">EN</a>
+        <a href="/datenschutzerklärung" class="lang-option" hreflang="de" aria-label="Sprache auf Deutsch wechseln">DE</a> <!-- Changed href to /datenschutzerklärung -->
+        <a href="#" class="lang-option active-lang" hreflang="en" aria-label="Switch language to English">EN</a>
       </li>
     </ul>
-    <div class="hamburger-menu" role="button" aria-label="Menü umschalten" aria-expanded="false" aria-controls="nav-links-list">
+    <div class="hamburger-menu" role="button" aria-label="Toggle menu" aria-expanded="false" aria-controls="nav-links-list"> <!-- Changed aria-label -->
       <span class="bar bar1"></span>
       <span class="bar bar2"></span>
       <span class="bar bar3"></span>
     </div>
   </nav>
 
-  <main class="content-section"> <!-- Geändert von impressum-section zu content-section für Allgemeingültigkeit -->
-    <h1>Datenschutzerklärung</h1>
+  <main class="content-section">
+    <h1>Privacy Policy</h1>
 
-    <h2>1. Einleitung</h2>
-    <p>Der Schutz Ihrer personenbezogenen Daten ist uns ein wichtiges Anliegen. Auf dieser Website werden keine personenbezogenen Daten erhoben, verarbeitet oder gespeichert, es sei denn, dies ist technisch erforderlich.</p>
-    <p>Diese Datenschutzerklärung informiert Sie gemäß Art. 13 DSGVO über die Art, den Umfang und den Zweck der Verarbeitung personenbezogener Daten beim Besuch dieser Website.</p>
+    <h2>1. Introduction</h2>
+    <p>The protection of your personal data is very important to us. No personal data is collected, processed, or stored on this website unless it is technically necessary.</p>
+    <p>This privacy policy informs you in accordance with Art. 13 GDPR about the nature, scope, and purpose of the processing of personal data when visiting this website.</p>
 
-    <h2>2. Verantwortliche Stelle</h2>
+    <h2>2. Responsible Body</h2>
     <p>
       Hausarztpraxis Bazara<br>
       Safia Bazara<br>
       Alte Hellersdorfer Str. 123<br>
       12629 Berlin<br>
-      Telefon: +49 (0) 30 9939 168<br>
-      E-Mail: <a href="mailto:info@praxis-bazara.de">arztpraxisbazara@gmail.com</a>
+      Phone: +49 (0) 30 9939 168<br>
+      Email: <a href="mailto:info@praxis-bazara.de">arztpraxisbazara@gmail.com</a>
     </p>
 
     <h2>3. Hosting</h2>
-    <p>Diese Website wird über GitHub Pages gehostet.<br>
-    Der Anbieter ist:<br>
+    <p>This website is hosted via GitHub Pages.<br>
+    The provider is:<br>
     GitHub Inc.<br>
     88 Colin P. Kelly Jr. Street<br>
     San Francisco, CA 94107<br>
     USA</p>
-    <p>Beim Aufruf der Website übermittelt Ihr Browser automatisch Informationen an den Server von GitHub. Dabei handelt es sich insbesondere um:</p>
+    <p>When you access the website, your browser automatically transmits information to GitHub's server. This includes in particular:</p>
     <ul>
-      <li>IP-Adresse</li>
-      <li>Datum und Uhrzeit des Zugriffs</li>
-      <li>Browsertyp und Version</li>
-      <li>Betriebssystem</li>
-      <li>Referrer-URL</li>
+      <li>IP address</li>
+      <li>Date and time of access</li>
+      <li>Browser type and version</li>
+      <li>Operating system</li>
+      <li>Referrer URL</li>
     </ul>
-    <p>Diese Daten werden von GitHub automatisch in sogenannten Server-Logfiles gespeichert. Eine Auswertung durch uns findet nicht statt. Weitere Informationen finden Sie in der <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement" target="_blank" rel="noopener noreferrer">Datenschutzerklärung von GitHub</a>.</p>
+    <p>This data is automatically stored by GitHub in so-called server log files. We do not evaluate this data. Further information can be found in <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement" target="_blank" rel="noopener noreferrer">GitHub's Privacy Statement</a>.</p>
 
     <h2>4. Google Fonts</h2>
-    <p>Auf dieser Website werden Schriftarten von Google Fonts verwendet. Diese sind lokal eingebunden. Eine Verbindung zu Google-Servern findet dabei nicht statt. Es werden somit keine personenbezogenen Daten an Google übermittelt.</p>
+    <p>This website uses fonts from Google Fonts. These are embedded locally. No connection to Google servers is established. Therefore, no personal data is transmitted to Google.</p>
 
-    <h2>5. Cookies und Tracking</h2>
-    <p>Diese Website verwendet keine Cookies, kein Tracking und keine Analyse-Tools wie Google Analytics. Es findet keine Nutzerverfolgung oder Profilbildung statt.</p>
+    <h2>5. Cookies and Tracking</h2>
+    <p>This website does not use cookies, tracking, or analysis tools such as Google Analytics. No user tracking or profiling takes place.</p>
 
-    <h2>6. Kontaktaufnahme</h2>
-    <p>Es gibt kein Kontaktformular auf dieser Website. Wenn Sie per E-Mail oder Telefon Kontakt aufnehmen, werden Ihre Angaben ausschließlich zur Bearbeitung der Anfrage verwendet.</p>
+    <h2>6. Contact</h2>
+    <p>There is no contact form on this website. If you contact us by email or phone, your information will be used exclusively to process your request.</p>
 
-    <h2>7. Ihre Rechte</h2>
-    <p>Sie haben nach der DSGVO folgende Rechte:</p>
+    <h2>7. Your Rights</h2>
+    <p>According to the GDPR, you have the following rights:</p>
     <ul>
-      <li>Recht auf Auskunft über gespeicherte Daten (Art. 15 DSGVO)</li>
-      <li>Recht auf Berichtigung (Art. 16 DSGVO)</li>
-      <li>Recht auf Löschung („Recht auf Vergessenwerden“) (Art. 17 DSGVO)</li>
-      <li>Recht auf Einschränkung der Verarbeitung (Art. 18 DSGVO)</li>
-      <li>Recht auf Datenübertragbarkeit (Art. 20 DSGVO)</li>
-      <li>Recht auf Widerspruch gegen die Verarbeitung (Art. 21 DSGVO)</li>
+      <li>Right to information about stored data (Art. 15 GDPR)</li>
+      <li>Right to rectification (Art. 16 GDPR)</li>
+      <li>Right to erasure ("Right to be forgotten") (Art. 17 GDPR)</li>
+      <li>Right to restriction of processing (Art. 18 GDPR)</li>
+      <li>Right to data portability (Art. 20 GDPR)</li>
+      <li>Right to object to processing (Art. 21 GDPR)</li>
     </ul>
-    <p>Sie haben zudem das Recht, sich bei einer Aufsichtsbehörde zu beschweren, z. B. bei der Berliner Beauftragten für Datenschutz und Informationsfreiheit.</p>
+    <p>You also have the right to lodge a complaint with a supervisory authority, e.g., the Berlin Commissioner for Data Protection and Freedom of Information.</p>
 
-    <h2>8. Änderungen dieser Datenschutzerklärung</h2>
-    <p>Wir behalten uns vor, diese Datenschutzerklärung gelegentlich anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht.</p>
-    <p>Stand: Juni 2025</p>
+    <h2>8. Changes to this Privacy Policy</h2>
+    <p>We reserve the right to adapt this privacy policy occasionally so that it always complies with current legal requirements.</p>
+    <p>Last updated: June 2025</p>
 
   </main>
 
   <footer class="main-footer">
     <div class="footer-top-left-content">
-      <div class="footer-new-title">Ihre Gesundheit.<br>Unser Auftrag.</div>
-      <a href="/kontakt" class="footer-new-button">Kontakt</a>
+      <div class="footer-new-title">Your Health.<br>Our Mission.</div> <!-- Translated -->
+      <a href="/en/contact" class="footer-new-button">Contact</a> <!-- Changed href to /en/contact -->
     </div>
     <div class="footer-logo-wrapper">
       <div class="footer-logo">
@@ -889,38 +890,38 @@
     </div>
     <div class="footer-bottom-wrapper">
       <div class="footer-bottom-left-text">
-        <span class="hausarzt-color">Hausarztpraxis</span><br>
+        <span class="hausarzt-color">Family Practice</span><br> <!-- Translated -->
         <span class="bazara-color">Bazara</span>
       </div>
       <div class="footer-contact-hours-container">
         <div class="footer-contact-column">
-          <p>Kontakt:</p>
+          <p>Contact:</p>
           <p>Alte Hellersdorfer Str.</p>
           <p>12629 Berlin</p>
-          <p>Telefon: +49 (0) 30 9939 168</p>
-          <p>Telefax: +49 (0) 30 9940 2335</p>
+          <p>Phone: +49 (0) 30 9939 168</p>
+          <p>Fax: +49 (0) 30 9940 2335</p>
         </div>
         <div class="footer-hours-column">
-          <p class="hours-title">Öffnungszeiten:</p>
+          <p class="hours-title">Opening Hours:</p> <!-- Translated -->
           <div class="footer-hours-details">
             <div class="footer-hours-days">
-              <p>Mo, Di, Fr:</p>
-              <p>Mo:</p>
-              <p>Do:</p>
-              <p>Mi:</p>
+              <p>Mon, Tue, Fri:</p>
+              <p>Mon:</p>
+              <p>Thu:</p>
+              <p>Wed:</p>
             </div>
             <div class="footer-hours-times">
-              <p>8:30 - 12 Uhr</p>
-              <p>15:00 - 18 Uhr</p>
-              <p>13:00 - 18 Uhr</p>
-              <p>nach Vereinbarung</p>
+              <p>8:30 AM - 12 PM</p>
+              <p>3:00 PM - 6 PM</p>
+              <p>1:00 PM - 6 PM</p>
+              <p>by appointment</p> <!-- Translated -->
             </div>
           </div>
         </div>
       </div>
       <div class="footer-bottom-right-links">
-        <a href="/impressum">Impressum</a>
-        <a href="/datenschutzerklärung">Datenschutzerklärung</a>
+        <a href="/en/imprint">Imprint</a> <!-- Changed href to /en/imprint -->
+        <a href="/en/privacypolicy">Privacy Policy</a> <!-- Changed href to /en/privacypolicy -->
       </div>
     </div>
   </footer>
@@ -935,7 +936,7 @@
       const htmlElement = document.documentElement;
 
       if (!mainNav || !navLinksList) { // navLinksList statt navLinksUl
-        console.error('Erforderliche Elemente für Menüanpassung nicht gefunden (mainNav oder navLinksList).');
+        console.error('Required elements for menu adjustment not found (mainNav or navLinksList).');
         return;
       }
 
@@ -946,7 +947,7 @@
 
 
       if (!footer) {
-        console.warn('Footer-Element (.main-footer) nicht gefunden. Menü behält Standardaussehen (schwarzer Text).');
+        console.warn('Footer element (.main-footer) not found. Menu will retain default appearance (black text).');
         // Keine Event-Listener hinzufügen, wenn kein Footer vorhanden ist, auf den reagiert werden soll.
         return;
       }
