--- a/en/imprint.html
+++ b/en/imprint.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Datenschutzerklärung | Hausarztpraxis Bazara – Safia Bazara</title>
+  <title>Imprint | General Practice Bazara – Safia Bazara</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Hausarztpraxis Bazara" />
   <link rel="manifest" href="/favicon/site.webmanifest" />
+  <meta name="robots" content="noindex, follow">
 
   <!-- Google Fonts Einbindung -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Questrial&family=Poppins:wght@300;500;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
@@ -18,8 +19,8 @@
       background-color: #341700;  /* Hintergrundfarbe der Markierung */
       color: white;               /* Textfarbe der Markierung */
     }
-    
-    /* Für WebKit-basierte Browser (Chrome, Safari, Edge) */
+
+        /* Für WebKit-basierte Browser (Chrome, Safari, Edge) */
     ::-webkit-scrollbar {
       width: 8px;          /* schmaler */
       height: 8px;         /* falls horizontaler Scrollbar */
@@ -82,6 +83,7 @@
       backdrop-filter: blur(16px); /* Noch stärkerer Unschärfeeffekt */
       -webkit-backdrop-filter: blur(16px);
       background-color: rgba(230, 230, 230, 0.15); /* Hintergrundtransparenz auf 0.15 setzen */
+
     }
 
     /* Logo Stile für das Menü */
@@ -153,7 +155,6 @@
       font-size: 16px;
       position: relative; /* Notwendig für die Positionierung des Pseudo-Elements */
       padding-bottom: 1px; /* Platz für die Linie unter dem Text */
-
     }
 
     /* Language Switcher Styles (kopiert von index.html) */
@@ -201,11 +202,11 @@
       content: '';
       position: absolute;
       width: 0;
-      height: 1.3px; /* Dicke der Linie angepasst */
+      height: 1.3px; /* Dicke der Linie */
       bottom: 0;
       left: 0;
       background-color: currentColor; /* Nimmt die Textfarbe des Links an */
-      transition: width 0.2s ease-in-out; /* Animation für die Breite */
+      transition: width 0.2s ease-in-out; /* Animation für die Breite, Dauer wie in leistungen.html */
     }
 
     .nav-links a:hover::after {
@@ -250,29 +251,21 @@
       transform: rotate(45deg) translate(-5px, -6px);
     }
 
-    /* Datenschutzerklärung spezifische Stile (analog zu Impressum) */
-    .content-section { /* Allgemeine Klasse für Inhaltsbereiche */
+    /* Impressum spezifische Stile */
+    .impressum-section {
       padding: 40px 40px 100px 180px; /* Linker Rand und unterer Abstand zur Fußzeile vergrößert */
       background-color: #ffffff; /* Weißer Hintergrund für den Inhalt */
-      min-height: 0;
+      min-height: 0; /* Effektive Mindesthöhe; vorherige Berechnung (calc(100vh - 93px - 100vh)) ergab einen negativen Wert. */
       box-sizing: border-box;
     }
-    .content-section h1 {
+    .impressum-section h1 {
         font-family: 'Poppins', sans-serif;
         font-weight: 700;
         font-size: 48px;
         color: #6e370e;
         margin-bottom: 30px;
     }
-    .content-section h2 {
-        font-family: 'Poppins', sans-serif;
-        font-weight: 500; /* Etwas leichter als h1 */
-        font-size: 28px; /* Größer als p, kleiner als h1 */
-        color: #6e370e;
-        margin-top: 40px; /* Abstand nach oben */
-        margin-bottom: 20px; /* Abstand nach unten */
-    }
-    .content-section p, .content-section ul {
+    .impressum-section p, .impressum-section ul {
         font-family: 'Poppins', sans-serif;
         font-weight: 300;
         font-size: 16px;
@@ -280,15 +273,15 @@
         color: #333;
         margin-bottom: 15px;
     }
-    .content-section ul {
+    .impressum-section ul {
         list-style-position: inside;
         padding-left: 20px;
     }
-    .content-section strong {
+    .impressum-section strong {
         font-weight: 500;
     }
-    .content-section a {
-        color: #6e370e; /* Standard-Linkfarbe */
+    .impressum-section a {
+        color: #6e370e; /* Standard-Linkfarbe im Impressum */
         text-decoration-color: #6e370e; /* Farbe des Unterstrichs */
         text-decoration-thickness: 1px; /* Dicke des Unterstrichs */
     }
@@ -513,8 +506,7 @@
     .main-nav.nav-active .hamburger-menu .bar {
       background-color: #0c0c0c; /* Dunkle Farbe für das X auf weißem Menühintergrund */
     }
-
-    @media (max-width: 768px) {
+@media (max-width: 768px) {
       /* Entfernt das blaue Aufleuchten beim Antippen auf Mobilgeräten */
       * {
         -webkit-tap-highlight-color: transparent;
@@ -559,7 +551,7 @@
         visibility: visible;
         padding-top: 20px; /* Reduziert von 60px, um Sprachwechsler weiter nach oben zu schieben */
         padding-bottom: 60px; /* Mehr Abstand unten für die größeren Links und den gewünschten Freiraum */
-        justify-content: flex-start; /* Geändert von flex-end zu flex-start wie in index.html */
+        justify-content: flex-start; /* Geändert zu flex-start wie in index.html/faq.html */
         transition: opacity 0.35s ease-in-out, max-height 0.35s ease-in-out, padding-top 0.35s ease-in-out, padding-bottom 0.35s ease-in-out, visibility 0s linear 0s;
       }
 
@@ -595,12 +587,12 @@
         display: none;
       }
 
-      /* Ersten Hauptmenüpunkt nach unten schieben, um Platz für Sprachwechsler oben zu machen (kopiert von index.html) */
+      /* Ersten Hauptmenüpunkt nach unten schieben, um Platz für Sprachwechsler oben zu machen (kopiert von index.html/faq.html) */
       .main-nav.nav-active .nav-links > li:not(.lang-switcher):first-of-type {
         margin-top: auto;
       }
 
-      /* Sprachwechsler im mobilen Menü nach oben links verschieben (kopiert von index.html) */
+      /* Sprachwechsler im mobilen Menü nach oben links verschieben (kopiert von index.html/faq.html) */
       .main-nav .nav-links li.lang-switcher {
         order: -1; /* Stellt sicher, dass es das erste Element in der Flex-Spalte ist */
         margin-left: 0; /* Entfernt den Desktop-Margin */
@@ -613,7 +605,7 @@
         align-items: center; /* Vertikale Ausrichtung der Sprachoptionen */
       }
 
-      /* Spezifische Stile für die Sprachoptionen im mobilen Menü (kopiert von index.html) */
+      /* Spezifische Stile für die Sprachoptionen im mobilen Menü (kopiert von index.html/faq.html) */
       .main-nav .nav-links li.lang-switcher a.lang-option {
         font-size: 1.1rem;   /* Schriftgröße auf 1.1rem gesetzt */
         font-weight: 300;    /* Konsistentes Schriftgewicht */
@@ -633,25 +625,20 @@
         display: block; /* Hamburger-Icon auf Mobilgeräten anzeigen */
       }
 
-      /* Content Section Anpassungen für Mobilgeräte (analog zu Impressum) */
-      .content-section {
+      /* Impressum Section Anpassungen für Mobilgeräte */
+      .impressum-section {
         padding: 40px 20px 60px 20px; /* Angepasstes Padding für Mobilgeräte */
       }
-      .content-section h1 {
-        font-size: 30px; /* Kleinere Schriftgröße für h1 */
+      .impressum-section h1 {
+        font-size: 36px; /* Kleinere Schriftgröße für h1 */
         margin-bottom: 20px; /* Angepasster Abstand */
       }
-      .content-section h2 {
-        font-size: 22px; /* Kleinere Schriftgröße für h2 */
-        margin-top: 30px;
-        margin-bottom: 15px;
-      }
-      .content-section p,
-      .content-section ul {
+      .impressum-section p,
+      .impressum-section ul {
         font-size: 15px; /* Etwas kleinere Schriftgröße für Textblöcke */
         line-height: 1.7; /* Leicht erhöhte Zeilenhöhe für bessere Lesbarkeit */
       }
-      .content-section ul {
+      .impressum-section ul {
         padding-left: 15px; /* Einzug für Listen etwas reduziert */
       }
 
@@ -667,6 +654,7 @@
         position: static; /* Positionierung aufheben */
         margin-bottom: 40px; /* Abstand zum nächsten Element */
         text-align: left; /* Inhalt linksbündig */
+        margin-left: -60px; /* Titel ein bisschen nach links verschieben */
       }
 
       .footer-new-title {
@@ -784,97 +772,97 @@
 
   <nav class="main-nav">
     <div class="menu-logo">
-      <a href="/" class="logo-link">
+      <a href="/en/" class="logo-link">
         <div class="logo-text-container">
           <div class="bazara-style">BAZARA</div>
           <div class="safia-style">safia</div>
         </div>
-        <div class="subtitle-style">Hausarztpraxis</div>
+        <div class="subtitle-style">General Practice</div>
       </a>
     </div>
     <ul class="nav-links" id="nav-links-list">
-      <li><a href="/"><span class="menu-item-number">01</span>Home</a></li>
-      <li><a href="/leistungen"><span class="menu-item-number">02</span>Leistungen</a></li>
+      <li><a href="/en/"><span class="menu-item-number">01</span>Home</a></li>
+      <li><a href="/leistungen"><span class="menu-item-number">02</span>Services</a></li>
       <li><a href="/faq"><span class="menu-item-number">03</span>FAQ</a></li>
-      <li><a href="/kontakt"><span class="menu-item-number">04</span>Kontakt</a></li>
-      <!-- Language Switcher (kopiert von index.html) -->
+      <li><a href="/kontakt"><span class="menu-item-number">04</span>Contact</a></li>
       <li class="lang-switcher">
-        <a href="#" class="lang-option active-lang" hreflang="de" aria-label="Sprache auf Deutsch wechseln">DE</a>
-        <a href="/en/privacypolicy" class="lang-option" hreflang="en" aria-label="Switch language to English">EN</a>
+        <a href="/impressum" class="lang-option" hreflang="de" aria-label="Switch language to German">DE</a>
+        <a href="#" class="lang-option active-lang" hreflang="en" aria-label="Switch language to English">EN</a>
       </li>
     </ul>
-    <div class="hamburger-menu" role="button" aria-label="Menü umschalten" aria-expanded="false" aria-controls="nav-links-list">
+    <div class="hamburger-menu" role="button" aria-label="Toggle menu" aria-expanded="false" aria-controls="nav-links-list">
       <span class="bar bar1"></span>
       <span class="bar bar2"></span>
       <span class="bar bar3"></span>
     </div>
   </nav>
 
-  <main class="content-section"> <!-- Geändert von impressum-section zu content-section für Allgemeingültigkeit -->
-    <h1>Datenschutzerklärung</h1>
+  <main class="impressum-section">
+    <h1>Imprint</h1>
 
-    <h2>1. Einleitung</h2>
-    <p>Der Schutz Ihrer personenbezogenen Daten ist uns ein wichtiges Anliegen. Auf dieser Website werden keine personenbezogenen Daten erhoben, verarbeitet oder gespeichert, es sei denn, dies ist technisch erforderlich.</p>
-    <p>Diese Datenschutzerklärung informiert Sie gemäß Art. 13 DSGVO über die Art, den Umfang und den Zweck der Verarbeitung personenbezogener Daten beim Besuch dieser Website.</p>
-
-    <h2>2. Verantwortliche Stelle</h2>
+    <p><strong>Information according to § 5 TMG:</strong></p>
     <p>
-      Hausarztpraxis Bazara<br>
       Safia Bazara<br>
+      General Practice Bazara<br>
       Alte Hellersdorfer Str. 123<br>
-      12629 Berlin<br>
-      Telefon: +49 (0) 30 9939 168<br>
-      E-Mail: <a href="mailto:info@praxis-bazara.de">arztpraxisbazara@gmail.com</a>
+      12629 Berlin
     </p>
 
-    <h2>3. Hosting</h2>
-    <p>Diese Website wird über GitHub Pages gehostet.<br>
-    Der Anbieter ist:<br>
-    GitHub Inc.<br>
-    88 Colin P. Kelly Jr. Street<br>
-    San Francisco, CA 94107<br>
-    USA</p>
-    <p>Beim Aufruf der Website übermittelt Ihr Browser automatisch Informationen an den Server von GitHub. Dabei handelt es sich insbesondere um:</p>
+    <p><strong>Contact:</strong></p>
+    <p>
+      Phone: +49 (0) 30 9939 168<br>
+      Fax: +49 (0) 30 9940 2335<br>
+      E-Mail: <a href="mailto:arztpraxisbazara@gmail.com" target="_blank" rel="noopener noreferrer">arztpraxisbazara@gmail.com</a>
+    </p>
+
+    <p><strong>Legal Professional Title:</strong></p>
+    <p>Physician (awarded in the Federal Republic of Germany)</p>
+
+    <p><strong>Responsible Medical Association:</strong></p>
+    <p>
+      Berlin Medical Association<br>
+      Friedrichstraße 16<br>
+      10969 Berlin<br>
+      Website: <a href="https://www.aerztekammer-berlin.de" target="_blank" rel="noopener noreferrer">www.aerztekammer-berlin.de</a>
+    </p>
+
+    <p><strong>Responsible Association of Statutory Health Insurance Physicians:</strong></p>
+    <p>
+      Association of Statutory Health Insurance Physicians Berlin<br>
+      Masurenallee 6A<br>
+      14057 Berlin<br>
+      Website: <a href="https://www.kvberlin.de" target="_blank" rel="noopener noreferrer">www.kvberlin.de</a>
+    </p>
+
+    <p><strong>Professional Regulations:</strong></p>
     <ul>
-      <li>IP-Adresse</li>
-      <li>Datum und Uhrzeit des Zugriffs</li>
-      <li>Browsertyp und Version</li>
-      <li>Betriebssystem</li>
-      <li>Referrer-URL</li>
+      <li>Professional Code of Conduct of the Berlin Medical Association</li>
+      <li>Medical Professions Act of the State of Berlin</li>
     </ul>
-    <p>Diese Daten werden von GitHub automatisch in sogenannten Server-Logfiles gespeichert. Eine Auswertung durch uns findet nicht statt. Weitere Informationen finden Sie in der <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement" target="_blank" rel="noopener noreferrer">Datenschutzerklärung von GitHub</a>.</p>
+    <p>The regulations can be found on the website of the Berlin Medical Association (see above).</p>
 
-    <h2>4. Google Fonts</h2>
-    <p>Auf dieser Website werden Schriftarten von Google Fonts verwendet. Diese sind lokal eingebunden. Eine Verbindung zu Google-Servern findet dabei nicht statt. Es werden somit keine personenbezogenen Daten an Google übermittelt.</p>
+    <p><strong>Responsible for the content according to § 55 Abs. 2 RStV:</strong></p>
+    <p>
+      Safia Bazara<br>
+      Alte Hellersdorfer Str. 123<br>
+      12629 Berlin
+    </p>
 
-    <h2>5. Cookies und Tracking</h2>
-    <p>Diese Website verwendet keine Cookies, kein Tracking und keine Analyse-Tools wie Google Analytics. Es findet keine Nutzerverfolgung oder Profilbildung statt.</p>
-
-    <h2>6. Kontaktaufnahme</h2>
-    <p>Es gibt kein Kontaktformular auf dieser Website. Wenn Sie per E-Mail oder Telefon Kontakt aufnehmen, werden Ihre Angaben ausschließlich zur Bearbeitung der Anfrage verwendet.</p>
-
-    <h2>7. Ihre Rechte</h2>
-    <p>Sie haben nach der DSGVO folgende Rechte:</p>
-    <ul>
-      <li>Recht auf Auskunft über gespeicherte Daten (Art. 15 DSGVO)</li>
-      <li>Recht auf Berichtigung (Art. 16 DSGVO)</li>
-      <li>Recht auf Löschung („Recht auf Vergessenwerden“) (Art. 17 DSGVO)</li>
-      <li>Recht auf Einschränkung der Verarbeitung (Art. 18 DSGVO)</li>
-      <li>Recht auf Datenübertragbarkeit (Art. 20 DSGVO)</li>
-      <li>Recht auf Widerspruch gegen die Verarbeitung (Art. 21 DSGVO)</li>
-    </ul>
-    <p>Sie haben zudem das Recht, sich bei einer Aufsichtsbehörde zu beschweren, z. B. bei der Berliner Beauftragten für Datenschutz und Informationsfreiheit.</p>
-
-    <h2>8. Änderungen dieser Datenschutzerklärung</h2>
-    <p>Wir behalten uns vor, diese Datenschutzerklärung gelegentlich anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht.</p>
-    <p>Stand: Juni 2025</p>
+    <p><strong>Disclaimer, Copyright and Data Protection:</strong></p>
+    <p>Please also note our separate <a href="/privacy-policy">Privacy Policy</a>.</p>
+    <p>
+      <strong>Web Design & Technical Implementation:</strong><br>
+      vivenna – Websites for Medical Practices<br>
+      <a href="https://www.vivenna-it.de" target="_blank" rel="noopener noreferrer">www.vivenna-it.de</a>
+    </p>
+    <!-- Further specific notes on disclaimer and copyright can be added here -->
 
   </main>
 
   <footer class="main-footer">
     <div class="footer-top-left-content">
-      <div class="footer-new-title">Ihre Gesundheit.<br>Unser Auftrag.</div>
-      <a href="/kontakt" class="footer-new-button">Kontakt</a>
+      <div class="footer-new-title">Your Health.<br>Our Mission.</div>
+      <a href="/kontakt" class="footer-new-button">Contact</a>
     </div>
     <div class="footer-logo-wrapper">
       <div class="footer-logo">
@@ -883,44 +871,44 @@
             <div class="bazara-style">BAZARA</div>
             <div class="safia-style">safia</div>
           </div>
-          <div class="subtitle-style">Hausarztpraxis</div>
+          <div class="subtitle-style">General Practice</div>
         </a>
       </div>
     </div>
     <div class="footer-bottom-wrapper">
       <div class="footer-bottom-left-text">
-        <span class="hausarzt-color">Hausarztpraxis</span><br>
+        <span class="hausarzt-color">General Practice</span><br>
         <span class="bazara-color">Bazara</span>
       </div>
       <div class="footer-contact-hours-container">
         <div class="footer-contact-column">
-          <p>Kontakt:</p>
+          <p>Contact:</p>
           <p>Alte Hellersdorfer Str.</p>
           <p>12629 Berlin</p>
-          <p>Telefon: +49 (0) 30 9939 168</p>
-          <p>Telefax: +49 (0) 30 9940 2335</p>
+          <p>Phone: +49 (0) 30 9939 168</p>
+          <p>Fax: +49 (0) 30 9940 2335</p>
         </div>
         <div class="footer-hours-column">
-          <p class="hours-title">Öffnungszeiten:</p>
+          <p class="hours-title">Opening Hours:</p>
           <div class="footer-hours-details">
             <div class="footer-hours-days">
-              <p>Mo, Di, Fr:</p>
-              <p>Mo:</p>
-              <p>Do:</p>
-              <p>Mi:</p>
+              <p>Mon, Tue, Fri:</p>
+              <p>Mon:</p>
+              <p>Thu:</p>
+              <p>Wed:</p>
             </div>
             <div class="footer-hours-times">
-              <p>8:30 - 12 Uhr</p>
-              <p>15:00 - 18 Uhr</p>
-              <p>13:00 - 18 Uhr</p>
-              <p>nach Vereinbarung</p>
+              <p>8:30 AM - 12:00 PM</p>
+              <p>3:00 PM - 6:00 PM</p>
+              <p>1:00 PM - 6:00 PM</p>
+              <p>by appointment</p>
             </div>
           </div>
         </div>
       </div>
       <div class="footer-bottom-right-links">
-        <a href="/impressum">Impressum</a>
-        <a href="/datenschutzerklärung">Datenschutzerklärung</a>
+        <a href="/imprint.html">Imprint</a>
+        <a href="/privacy-policy">Privacy Policy</a>
       </div>
     </div>
   </footer>
